# recursive_remote

./: Cargo.toml  README.md
.github/workflows/: rust.yml
common/: Cargo.toml
recursive_remote/: .gitignore  Cargo.toml  build.rs
recursive_remote/src/: cmd_fetch.rs  cmd_push.rs  config.rs  embedded_config.rs  encoding.rs  lib.rs  main.rs  persistence.rs  serialization.rs  update.rs  util.rs
recursive_remote/tests/: protocol.rs  push_force.rs  roundtrip.rs
tests/: roundtrip.rs
