[package]
name = "recursive_remote"
version = "0.1.0"
authors = ["Alex Roper <alex@aroper.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3"
brotli = "3.3"
build_stamp = "1.0"
byteorder = "1.4"
chrono = "0.4"
clap = "3.2"
env_logger = "0.9"
eseb = { version = "1.1", git = "https://github.com/calmofthestorm/eseb.git" }
file-lock = "2.1"
git2 = "0.17"
hex = "0.4"
log = "0.4"
once_cell = "1.17"
rand = "0.8"
record_reader = { version = "1.0", git = "https://github.com/calmofthestorm/record_reader.git", features = [] }
regex = "1.6"
serde = {version="1.0", features = ["derive"]}
sha1 = "0.10"
sha2 = "0.10"
strum = "0.24"
strum_macros = "0.24"
tempdir = "0.3"
thiserror = "1.0"
walkdir = "2.3"

[[bin]]
name = "git-remote-recursive"
path = "src/main.rs"

[build-dependencies]
build_stamp = "1.0"
