[package]
name = "recursive_remote"
version = "0.2.0"
authors = ["Alex Roper <alex@aroper.net>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
assert_fs = "1.1"
base64 = "0.22"
bincode = "1.3"
brotli = "8.0"
build_stamp = "1.0"
byteorder = "1.5"
clap = "3.2"
env_logger = "0.11"
eseb = { version = "2.0", git = "https://github.com/calmofthestorm/eseb.git" }
file-lock = "2.1"
gix = { version = "0.79", features = ["tree-editor"] }
gix-actor = "0.39"
gix-commitgraph = "0.33"
gix-config = "0.52"
gix-date = "0.14"
gix-hash = "0.22"
gix-object = "0.56"
gix-ref = "0.59"
gix-revision = "0.41"
gix-sec = "0.13"
hex = "0.4"
log = "0.4"
once_cell = "1.21"
predicates = "3.1"
rand = "0.8"
record_reader = { version = "1.1", git = "https://github.com/calmofthestorm/record_reader.git", features = [] }
regex = "1.12"
serde = {version="1.0", features = ["derive"]}
sha1 = "0.10"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3.25"
thiserror = "1.0"
uuid = { version = "1.21", features = ["v4"] }
walkdir = "2.5"

[[bin]]
name = "git-remote-recursive"
path = "src/main.rs"

[build-dependencies]
build_stamp = "1.0"
